--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body, #root {
+  height: 100%;
   margin: 0;
   padding: 0;
+}
+
+body {
   background: #F5F5F5;    /* 浅灰（主背景） */
   background-image: 
     radial-gradient(at 27% 37%, rgba(163, 163, 163, 0.015) 0px, transparent 50%),
